fix: waveText touch bug causing text selection on mobile device

--- a/src/App.css
+++ b/src/App.css
@@ -281,13 +281,18 @@ a .buttonPrimary:active {
   position: relative;
   display: inline-block;
   cursor: pointer;
+
+  -webkit-user-select: none;
+  user-select: none;
+  -webkit-touch-callout: none; /* iOS/Safari, harmless elsewhere */
+  touch-action: manipulation;  /* reduces double-tap/gesture quirks */
 }
 /* wave underline */
 .waveText::after {
   content: "";
   position: absolute;
   left: 0;
-  bottom: -0.2em;
+  bottom: -0.3rem;
 
   width: 100%;
   height: 8px;
